[package]
name = "async-proxy"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { git = "https://github.com/tokio-rs/tokio"}
#tokio-tcp = { git = "https://github.com/tokio-rs/tokio", features = ["incoming"] }
#tokio-io = { git = "https://github.com/tokio-rs/tokio"}
#tokio-sync = { git = "https://github.com/tokio-rs/tokio"}
futures-preview = "0.3.0-alpha.17"
bytes = "0.4"
